--- a/_includes/head.html
+++ b/_includes/head.html
@@ -86,4 +86,6 @@
   {% endunless %}
 
   {% include metadata-hook.html %}
+  {% seo %}
+  <meta name="google-site-verification" content="l4eGshKNRHHy4PNTKBs_QdCNnNmT31jhv78hltvnKn4" />
 </head>
